# sparsekernels

./: Dockerfile  README.md
sparsekernel/: CMakeLists.txt  type_utils.h
sparsekernel/sddmm/: sddmm_test.cu.cc
sparsekernel/spmm/: cuda_spmm.cu.cc  cuda_spmm.h
sparsekernels/: CMakeLists.txt
sparsekernels/sddmm/: cuda_sddmm.cu.cc
sparsekernels/spmm/: spmm_test.cu.cc
sputnik/: CMakeLists.txt  load_store.h  matrix_utils.cu.cc  memory_aligner.h  sputnik.h  type_utils.h  vector_utils.h
sputnik/spmm/: cuda_spmm.cu.cc  cuda_spmm.h
